<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/fondo_dialog"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/tipoAEditar"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:text="@string/Tipo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:id="@+id/direccionAEditar"
        android:text="@string/direccion"/>
    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:id="@+id/precioAEditar"
        android:text="@string/precio"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:id="@+id/NombreAEditar"
        android:text="@string/Nombre"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:id="@+id/TelefonoAEditar"
        android:text="@string/Tel"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:id="@+id/FechaAEditar"
        android:text="@string/fecha"/>
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btnEscogerFecha"
        android:layout_height="wrap_content"
        android:background="@drawable/boton"
        android:layout_marginTop="15dp"
        android:text="@string/EscogerFecha"
        android:layout_marginBottom="15dp"
        android:textColor="@color/colorPrimary"/>
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btnArrendar"
        android:layout_height="wrap_content"
        android:background="@drawable/boton"
        android:text="@string/Arrendar"
        android:layout_marginBottom="15dp"
        android:textColor="@color/colorPrimary"/>
</LinearLayout>