<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/fondo_dialog"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleMenuManejo"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/btnAddVivienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnIngresarVivienda" />

    <Button
        android:id="@+id/btnDeleteVivienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnEliminarVivienda" />

    <Button
        android:id="@+id/btnDesarrendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnDesarrendar" />
</LinearLayout>