<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/fondo_dialog"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NuevaVivienda"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tipo"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>
        <Spinner
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:popupBackground="@color/colorAccent"
            android:id="@+id/spinner"/>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLPrecio"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/precio"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@color/colorAccent"
        app:hintTextColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPrecio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/direccion"
        android:textAlignment="center"
        android:textColorHint="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        android:inputType="textPassword"
        app:layout_constraintVertical_bias="0.413">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anadir"
        android:background="@drawable/boton"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/addVivienda"/>
</LinearLayout>