<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/fondo_dialog"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TitleRegister"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutId"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Id"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@color/colorAccent"
        app:hintTextColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Nombre"
        android:textAlignment="center"
        android:textColorHint="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        android:inputType="textPersonName"
        app:layout_constraintVertical_bias="0.413">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Tel"
        android:textAlignment="center"
        android:inputType="number"
        android:textColorHint="@color/colorAccent"
        app:hintTextColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textAlignment="center"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:inputType="textPassword"
        app:hintTextColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/anadir"
    android:background="@drawable/boton"
    android:textColor="#fff"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    android:id="@+id/btnAddDueno"/>
</LinearLayout>