<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/f"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".activity_Datos">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                android:text="@string/UnidadesRegistradas"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:id="@+id/txtUregis"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:text="@string/UnidadesA"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:id="@+id/txtNodisp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:text="@string/UnidadesD"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:id="@+id/txtdisp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:text="@string/BestClient"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:id="@+id/txtBestClient"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:text="@string/PromedioDeArriendos"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:id="@+id/txtProm"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:text="@string/TipoComun"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:id="@+id/txtTipoComun"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/btnDiaEspecifico"
                android:background="@drawable/boton"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/btnDiaEspecifico"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>